--- a/styles/global.css
+++ b/styles/global.css
@@ -1,15 +1,17 @@
+@import './fonts.css';
+
 nav {
   background-color: var(--bege);
   display: flex;
   justify-content: center;
-  padding: 40px;
+  padding: 2.5rem;
 }
 
 .primeiraParte {
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .imgFundo {
@@ -24,23 +26,251 @@ nav {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 2; /* Fica por cima da imagem */
+  z-index: 2;
   
-  background-color: rgba(45, 87, 44, 0.9); 
-  clip-path: polygon(0% 0%, 0% 100%, 45% 100%, 100% 35%, 100% 0%);
 }
 
 .textos {
   position: absolute;
   z-index: 3;
-  top: 20%;
+  top: 15%;
   left: 5%;
   color: var(--branco);
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  max-width: 40%;
+}
+
+.textos-1 {
+  font-family: 'Sora';
+  font-weight: 700;
+}
+
+.textos-2 {
+  font-family: 'Sora';
+  font-weight: 400;
 }
 
 .faixaMarketing {
   background-color: var(--verde-claro);
   display: flex;
   justify-content: center;
+  padding: 1.25rem;
+  color: var(--branco);
+  font-size: 24px;
+}
 
+/* --- SEÇÃO SERVIÇOS --- */
+.servicos {
+  background-image: url(../assets/raioCamada2.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 0.8rem;
+  padding-bottom: 6rem;
+}
+
+.container-svg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.svgSeta {
+  width: 60px;
+}
+
+.textoServico {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+}
+
+.grid-servicos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.item-servico {
+  text-align: left;
+}
+
+.item-servico h4 {
+  margin-bottom: 2px;
+  color: var(--verde-escuro-2);
+}
+
+.item-servico p {
+  line-height: 1.5;
+  color: var(--verde-escuro);
+}
+
+.botao-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 6.25rem;
+}
+
+.ver-mais {
+  padding: 5px 25px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  color: var(--branco);
+  background-color: var(--verde-claro);
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.ver-mais:hover {
+  background-color: var(--verde-escuro);
+}
+
+.ver-mais:active {
+  transform: scale(0.98);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 768px) {
+  .grid-servicos {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+.faq {
+  background-color: var(--verde-claro);
+  background-image: url(../assets/raioCamada3.svg);
+  background-repeat: no-repeat;
+  background-position: left 100px top;
+  padding: 6rem 2rem;
+  text-align: center;
+}
+
+
+
+.faq h2 {
+  font-size: 2.5rem;
+  color: var(--verde-escuro-2); 
+  margin-bottom: 3rem;
+  margin-top: 2.5rem;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  flex-wrap: wrap;
+  margin-bottom: 5rem;
+  margin-top: 8rem;
+}
+
+.card {
+  position: relative;
+  width: 320px;
+  height: 450px;
+  border-radius: 25px;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-end;
+  padding: 25px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(transparent, rgba(45, 87, 44, 0.9));
+  z-index: 2;
+}
+
+.card h3 {
+  position: relative;
+  z-index: 3;
+  color: var(--branco);
+  font-size: 1.5rem;
+  text-align: left;
+  line-height: 1.3;
+}
+
+
+.parceiros-container {
+  max-width: 1440px; 
+  margin: 0 auto 4rem auto; 
+
+  width: 100%;
+  overflow: hidden;
+  -webkit-mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);
+  mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);
+}
+
+
+.parceiros-scroll {
+  display: flex;
+  width: max-content;
+  align-items: center;
+  gap: 60px;
+  animation: scroll 40s linear infinite;
+  padding: 30px;
+}
+
+.parceiros-scroll img {
+  height: 35px;
+  width: auto;
+  filter: grayscale(100%) opacity(75%);
+  transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
+}
+
+.parceiros-scroll img:hover {
+  transform: scale(1.2); 
+  filter: grayscale(0%) opacity(100%); 
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.solicitar-orcamento {
+  background-color: var(--verde-escuro); 
+  color: var(--branco);
+  border: none;
+  padding: 15px 35px;
+  border-radius: 30px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
+
+.solicitar-orcamento:hover {
+  background-color: var(--verde-escuro-2);
+  transform: translateY(-2px);
 }
