--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,4 +1,4 @@
-*, *::before, *::after {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -22,8 +22,4 @@ input, button, textarea, select {
 a {
  color: inherit;
  text-decoration: none;
-}
-
-ul, ol {
-  list-style: none;
 }
