--- a/styles/sections/main.css
+++ b/styles/sections/main.css
@@ -55,7 +55,7 @@
 }
 
 .servicos {
-  background-image: url(../assets/raioCamada2.svg);
+  background-image: url('../../assets/raioCamada2.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
