--- a/styles/sections/section2.css
+++ b/styles/sections/section2.css
@@ -6,9 +6,8 @@
   background-position: right 30%;
   padding: 6rem 2rem;
   text-align: center;
+  margin-bottom: 0; /* Remove margem para conectar com o footer */
 }
-
-
 
 .faq h2 {
   font-size: 2.5rem;
@@ -70,17 +69,14 @@
   line-height: 1.3;
 }
 
-
 .parceiros-container {
   max-width: 1440px; 
   margin: 0 auto 4rem auto; 
-
   width: 100%;
   overflow: hidden;
   -webkit-mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);
   mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);
 }
-
 
 .parceiros-scroll {
   display: flex;
@@ -110,22 +106,4 @@
   to {
     transform: translateX(-50%);
   }
-}
-
-.solicitar-orcamento {
-  background-color: var(--verde-escuro); 
-  color: var(--branco);
-  border: none;
-  padding: 15px 35px;
-  border-radius: 30px;
-  font-size: 1.1rem;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease;
-}
-
-.solicitar-orcamento:hover {
-  background-color: var(--verde-escuro-2);
-  transform: translateY(-2px);
 }
