--- a/styles/extras/fonts.css
+++ b/styles/extras/fonts.css
@@ -1,52 +1,52 @@
+/* PT Sans Regular */
 @font-face {
   font-family: 'PT Sans';
-  src: url('../assets/fonts/PTSans-Regular.woff2') format('woff2'),
-       url('../assets/fonts/PTSans-Regular.ttf') format('truetype');
+  src: url('../../fonts/PTSans-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
+/* PT Sans Bold */
 @font-face {
   font-family: 'PT Sans';
-  src: url('../assets/fonts/PTSans-Bold.woff2') format('woff2'),
-       url('../assets/fonts/PTSans-Bold.ttf') format('truetype');
+  src: url('../../fonts/PTSans-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
+/* Manrope */
 @font-face {
   font-family: 'Manrope';
-  src: url('../assets/fonts/Manrope-VariableFont_wght.woff2') format('woff2-variations'),
-       url('../assets/fonts/Manrope-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('../../fonts/Manrope-VariableFont_wght.ttf') format('truetype-variations');
   font-weight: 100 900; 
   font-style: normal;
   font-display: swap;
 }
 
+/* Sora */
 @font-face {
   font-family: 'Sora';
-  src: url('../assets/fonts/Sora-VariableFont_wght.woff2') format('woff2-variations'),
-       url('../assets/fonts/Sora-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('../../fonts/Sora-VariableFont_wght.ttf') format('truetype-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
 
+/* Source Sans 3 */
 @font-face {
   font-family: 'Source Sans 3';
-  src: url('../assets/fonts/SourceSans3-VariableFont_wght.woff2') format('woff2-variations'),
-       url('../assets/fonts/SourceSans3-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('../../fonts/SourceSans3-VariableFont_wght.ttf') format('truetype-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
 
+/* Urbanist */
 @font-face {
   font-family: 'Urbanist';
-  src: url('../assets/fonts/Urbanist-VariableFont_wght.woff2') format('woff2-variations'),
-       url('../assets/fonts/Urbanist-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('../../fonts/Urbanist-VariableFont_wght.ttf') format('truetype-variations');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
