--- a/styles/sections/main.css
+++ b/styles/sections/main.css
@@ -18,6 +18,10 @@
   width: 100%;
   height: 100%;
   z-index: 2;
+  background-image: url('../../assets/backgroundImages/camadaRaio2.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .textos {
